--- a/docs/visualize_gam_yolo.Rmd
+++ b/docs/visualize_gam_yolo.Rmd
@@ -4,21 +4,270 @@ author: "Catarina Pien"
 date: '2022-10-05'
 output: html_document
 ---
+
 Shruti
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
+
 * validation plots
 * actual data points
 * grid of flow vs water temperature, colored by chlorophyll
 * marker of the extent of data for each inundation phase
 * same scale and axis range for each factor
 * random effect plot (partial effect of each)
+
+## Load required packages
+
 ```{r}
-load("data_model/gams_origdata.Rdata")
+#detach(gam)
+library(dplyr)
+library(readr)
+library(lubridate)
+library(glue)
+library(tidyr)
+library(zoo)
+library(car)
+library(MuMIn)
+library(psych)
+library(mgcv)
+library(ggplot2)
+library(viridis)
+library(nlme)
+library(kader)#cuberoot
+library(mgcv)
+
 ```
 
-## Filter datasets to region
+
+## Read in datasets and final models
+
+```{r}
+load("../data_model/gams_origdata.Rdata")
+
+```
+
+## Filter to Yolo Region
+
 ```{r}
 yolo <- alldata %>% filter(region == "yolo")
+
 ```
+
+
+### gamyo6d - Yolo final model validation
+
+Model: gam(log_chla ~ te(log_qsdy, WTmwk, by = inund_fac2) + inund_fac2 + s(station, bs = "re"), method = "REML", data = yolo, family = "gaussian")
+
+```{r}
+  # validate the final model by plotting residuals and save to a png to save space
+  png(filename = "../figures/gamyo6d.png", width = 7, height = 9, units = "in", res = 200)
+  resid = residuals(gamyo6d)
+  op = par(mfrow = c(3, 2), mar = c(5, 4, 1, 2), cex = 1.2)
+  # Plot 1: Residuals vs. Fitted values; should be centered around 0
+  plot(fitted(gamyo6d), resid, xlab = "Fitted values", ylab = "Residuals")
+  # Plot 2: histogram of the residuals; should be centered around 0
+  hist(resid, xlab = 'Residuals', main = "")
+  # Plot 3: is there autocorrelation in the residuals?
+  acf(resid)
+  # Plots 4,5,6: the Residuals vs. all the predictors; should be centered around 0
+  plot(yolo$log_qsdy, resid, xlab = "Flow",   ylab = "Residuals")
+  plot(yolo$WTmwk, resid, xlab = "WTmwk",   ylab = "Residuals")
+  plot(yolo$inund_fac2, resid, xlab = "inundation factor",   ylab = "Residuals")
+  par(op)
+  dev.off()
+  
+  #pacf(resid)
+```
+
+### PREDICT MODEL OUTPUTS FOR SIMULATED DATASET
+
+## Visualize the Yolo Final Model as a 2x2 grid ignoring random effect of station
+
+```{r}
+
+library(tidymv)
+
+# subset the yolo data frame each inundation factor
+yo.none = yolo %>% filter(inund_fac2 == "none")
+yo.shrt = yolo %>% filter(inund_fac2 == "short")
+yo.long = yolo %>% filter(inund_fac2 == "long")
+
+# Get values 
+y_table <- yolo %>% 
+  summarize(minQ = quantile(log_qsdy, 0.05),
+            maxQ = quantile(log_qsdy, 0.95),
+            minWT = quantile(WTmwk, 0.05),
+            maxWT = quantile(WTmwk, 0.95)) %>%
+  as.data.frame() %>% unlist()
+
+# divide all covars into this many intervals in simulated dataset
+grid.size = 49
+
+# calculate interval size for all 3 inundation factor simulation datasets
+int.lqsdy = (y_table[2] - y_table[1])/(grid.size)
+int.wtmwk = (y_table[4] - y_table[3])/(grid.size)
+
+# create sequences of values for model inputs
+seq.lqsdy = seq(y_table[1], y_table[2], by = int.lqsdy)
+seq.wtmwk = seq(y_table[3], y_table[4], by = int.wtmwk)
+
+# arrange the predictions in a grid.size x grid.size matrix ready to display as an image
+# create a matrix to hold the value
+chl.mat.none = matrix(data = NA, nrow = grid.size+1, ncol = grid.size+1)
+chl.mat.shrt = matrix(data = NA, nrow = grid.size+1, ncol = grid.size+1)
+chl.mat.long = matrix(data = NA, nrow = grid.size+1, ncol = grid.size+1)
+
+# use i as subscript for log_qsdy
+for (i in 1:(grid.size+1)) {
+  # use j as subscript for WTmwk
+  pred.none = predict_gam(gamyo6d, values = list(log_qsdy = seq.lqsdy[i], WTmwk = seq.wtmwk, inund_fac2 = "none", station = NULL), 
+                          exclude_terms = "s(station)")
+  pred.shrt = predict_gam(gamyo6d, values = list(log_qsdy = seq.lqsdy[i], WTmwk = seq.wtmwk, inund_fac2 = "short", station = NULL), 
+                          exclude_terms = "s(station)")
+  pred.long = predict_gam(gamyo6d, values = list(log_qsdy = seq.lqsdy[i], WTmwk = seq.wtmwk, inund_fac2 = "long", station = NULL), 
+                          exclude_terms = "s(station)")
+  chl.mat.none[i,] = pred.none$fit
+  chl.mat.shrt[i,] = pred.shrt$fit
+  chl.mat.long[i,] = pred.long$fit
+}
+
+# Color palette
+# col_range = colorRampPalette(viridis(25, option = "turbo"))
+# col_pal = col_range(1000)
+col_range1 = colorRampPalette(c("darkorchid4","blueviolet","blue4","blue","deepskyblue2","deepskyblue","yellow2"))
+col_range2 = colorRampPalette(c("yellow2","darkorange1","chocolate1","chocolate4","cornsilk2"))
+col_range3 = colorRampPalette(c("cornsilk2","gray","lightgray","white"))
+col_pal1 = col_range1(40)
+col_pal2 = col_range2(240)
+col_pal3 = col_range3(720)
+col_pal = c(col_pal1, col_pal2, col_pal3)
+
+# decide breaks for the color palette
+# adjust to actual chlorophyll values existing in the dataset
+# more than max is just one color; less than max is another
+temp = cbind(chl.mat.none, chl.mat.shrt, chl.mat.long)
+chl.ymin = min(yolo$chlorophyll)
+chl.ymax = max(yolo$chlorophyll)
+chla.min = min(min(temp), chl.ymin)
+chla.max = max(max(temp), chl.ymax)
+chla.int = (chl.ymax - chl.ymin)/998
+breaks = c(chla.min, seq(chl.ymin, chl.ymax, chla.int), chla.max)
+
+# calculating axes labels
+lbl.lqsdy = round(seq(y_table[1], y_table[2], by = (y_table[2] - y_table[1])/5), digits = 2)
+lbl.wtmwk = round(seq(y_table[3], y_table[4], by = (y_table[4] - y_table[3])/5), digits = 2)
+
+# calculate the outer hull coordinates for log_qsdy and WTmwk - gives the relevant row numbers
+cnvx.hull.none = c(chull(yo.none$log_qsdy, yo.none$WTmwk), chull(yo.none$log_qsdy, yo.none$WTmwk)[1])
+cnvx.hull.shrt = c(chull(yo.shrt$log_qsdy, yo.shrt$WTmwk), chull(yo.shrt$log_qsdy, yo.shrt$WTmwk)[1])
+cnvx.hull.long = c(chull(yo.long$log_qsdy, yo.long$WTmwk), chull(yo.long$log_qsdy, yo.long$WTmwk)[1])
+# get x,y coordinates of the hull
+yo.none.hull = cbind(yo.none[cnvx.hull.none, 31], yo.none[cnvx.hull.none, 17])
+yo.shrt.hull = cbind(yo.shrt[cnvx.hull.shrt, 31], yo.shrt[cnvx.hull.shrt, 17])
+yo.long.hull = cbind(yo.long[cnvx.hull.long, 31], yo.long[cnvx.hull.long, 17])
+
+# constrain to 5-95 percentile values
+yo.none.hull = yo.none.hull %>% 
+  mutate(log_qsdy = ifelse(log_qsdy < y_table[1], y_table[1], ifelse(log_qsdy > y_table[2], y_table[2], log_qsdy))) %>% 
+  mutate(WTmwk    = ifelse(WTmwk    < y_table[3], y_table[3], ifelse(WTmwk    > y_table[4], y_table[4], WTmwk)))
+yo.shrt.hull = yo.shrt.hull %>% 
+  mutate(log_qsdy = ifelse(log_qsdy < y_table[1], y_table[1], ifelse(log_qsdy > y_table[2], y_table[2], log_qsdy))) %>% 
+  mutate(WTmwk    = ifelse(WTmwk    < y_table[3], y_table[3], ifelse(WTmwk    > y_table[4], y_table[4], WTmwk)))
+yo.long.hull = yo.long.hull %>% 
+  mutate(log_qsdy = ifelse(log_qsdy < y_table[1], y_table[1], ifelse(log_qsdy > y_table[2], y_table[2], log_qsdy))) %>% 
+  mutate(WTmwk    = ifelse(WTmwk    < y_table[3], y_table[3], ifelse(WTmwk    > y_table[4], y_table[4], WTmwk)))
+
+```
+
+
+## MAKE THE ACTUAL FIGURE
+
+```{r}
+png(filename = "../figures/yo_2dfigure.png", width = 12, height = 4, units = "in", res = 300)
+
+par(mfrow = c(1, 3), mar = c(4, 2.75, 1, 2.5) + 0.1, oma = c(0, 2.25, 2, 2), las = 1, cex = 1)
+
+###-------------- Yolo: No inundation --------------###
+
+#png(filename = "../figures/yo_none_2dfigure.png", width = 4, height = 4, units = "in", res = 300)
+
+image(x = seq.lqsdy, y = seq.wtmwk, z = chl.mat.none, col = col_pal, breaks = breaks,
+      ylab = "", xlab = "", axes = F, ylim = range(seq.wtmwk), xlim = range(seq.lqsdy))
+
+# create breaks and labels for x and y axes
+axis(side = 1, at = lbl.lqsdy, labels = lbl.lqsdy)
+axis(side = 2, at = lbl.wtmwk, labels = lbl.wtmwk)
+
+# dull the outside polygon where data does not exist
+polygon(x = c(yo.none.hull[[1]], y_table[2],         y_table[2], y_table[1], y_table[1], y_table[2], y_table[2],         yo.none.hull[1, 1]), 
+        y = c(yo.none.hull[[2]], yo.none.hull[1, 2], y_table[4], y_table[4], y_table[3], y_table[3], yo.none.hull[1, 2], yo.none.hull[1, 2]), 
+        col = gray(1, 0.7), border = NA)
+points(x = yo.none$log_qsdy, y = yo.none$WTmwk, col = "white")
+
+mtext(text = "Log of same day flow", side = 1,
+      line = 2.5, adj = 0.5, las = 0)
+mtext(text = "Weekly mean water temperature", side = 2,
+      line = 3, adj = 0.5, las = 0)
+mtext(text = "Yolo: No inundation", side = 3,
+      line = 0.75, adj = 0.5, las = 0, font = 1.5)
+
+#dev.off()
+
+###--------- Yolo: short inundation (< 3 weeks) ---------###
+#png(filename = "../figures/yo_shrt_2dfigure.png", width = 4, height = 4, units = "in", res = 300)
+
+image(x = seq.lqsdy, y = seq.wtmwk, z = chl.mat.shrt, col = col_pal, breaks = breaks,
+      ylab = "", xlab = "", axes = F, ylim = range(seq.wtmwk), xlim = range(seq.lqsdy))
+
+# create breaks and labels for x and y axes
+axis(side = 1, at = lbl.lqsdy, labels = lbl.lqsdy)
+axis(side = 2, at = lbl.wtmwk, labels = lbl.wtmwk)
+
+# dull the outside polygon where data does not exist
+polygon(x = c(yo.shrt.hull[[1]], y_table[2],         y_table[2], y_table[1], y_table[1], y_table[2], y_table[2],         yo.shrt.hull[1, 1]), 
+        y = c(yo.shrt.hull[[2]], yo.shrt.hull[1, 2], y_table[4], y_table[4], y_table[3], y_table[3], yo.shrt.hull[1, 2], yo.shrt.hull[1, 2]), 
+        col = gray(1, 0.7), border = NA)
+points(x = yo.shrt$log_qsdy, y = yo.shrt$WTmwk, col = "white")
+
+mtext(text = "Log of same day flow", side = 1,
+      line = 2.5, adj=0.5, las=0)
+mtext(text = "Weekly mean water temperature", side = 2,
+      line = 3, adj=0.5, las=0)
+mtext(text = "Yolo: short inundation (< 3 weeks)", side = 3,
+      line = 0.75, adj=0.5, las=0, font=2)
+
+#dev.off()
+
+
+###--------- Downstream: long inundation (> 3 weeks) ---------###
+#png(filename = "../figures/yo_long_2dfigure.png", width = 4, height = 4, units = "in", res = 300)
+
+image(x = seq.lqsdy, y = seq.wtmwk, z = chl.mat.long, col = col_pal, breaks = breaks,
+      ylab = "", xlab = "", axes = F, ylim = range(seq.wtmwk), xlim = range(seq.lqsdy))
+
+# create breaks and labels for x and y axes
+axis(side = 1, at = lbl.lqsdy, labels = lbl.lqsdy)
+axis(side = 2, at = lbl.wtmwk, labels = lbl.wtmwk)
+
+# dull the outside polygon where data does not exist
+polygon(x = c(yo.long.hull[[1]], y_table[2],         y_table[2], y_table[1], y_table[1], y_table[2], y_table[2],         yo.long.hull[1, 1]), 
+        y = c(yo.long.hull[[2]], yo.long.hull[1, 2], y_table[4], y_table[4], y_table[3], y_table[3], yo.long.hull[1, 2], yo.long.hull[1, 2]), 
+        col = gray(1, 0.7), border = NA)
+points(x = yo.long$log_qsdy, y = yo.long$WTmwk, col = "white")
+
+mtext(text = "Log of same day flow", side = 1,
+      line = 2.5, adj=0.5, las=0)
+mtext(text = "Weekly mean water temperature", side = 2,
+      line = 3, adj=0.5, las=0)
+mtext(text = "Yolo: long inundation", side = 3,
+      line = 0.75, adj=0.5, las=0, font=2)
+
+#dev.off()
+```
+
+
+
+
+
