--- a/docs/visualize_gam_downstream.Rmd
+++ b/docs/visualize_gam_downstream.Rmd
@@ -21,6 +21,7 @@ library(ggplot2)
 library(tidymv)
 library(gratia)
 library(mgcv)
+library(patchwork)
 ```
 
 ```{r}
@@ -251,4 +252,147 @@ mtext(text = "downstream: long inundation", side = 3,
       line = 0.75, adj=0.5, las=0, font=2)
 
 dev.off()
+```
+Make hulls
+```{r}
+d.shrt.hull2 <- data.frame(log_qsdy = c(d.shrt.hull[[1]], d_table[2],         d_table[2], d_table[1], d_table[1], d_table[2], d_table[2],         d.shrt.hull[1, 1]), 
+        WTmwk = c(d.shrt.hull[[2]], d.shrt.hull[1, 2], d_table[4], d_table[4], d_table[3], d_table[3], d.shrt.hull[1, 2], d.shrt.hull[1, 2])) %>%
+  mutate(inund_fac2 = "short")
+
+
+d.none.hull2 <- data.frame(log_qsdy = c(d.none.hull[[1]], d_table[2],         d_table[2], d_table[1], d_table[1], d_table[2], d_table[2],         d.none.hull[1, 1]), 
+        WTmwk = c(d.none.hull[[2]], d.none.hull[1, 2], d_table[4], d_table[4], d_table[3], d_table[3], d.none.hull[1, 2], d.none.hull[1, 2])) %>%
+  mutate(inund_fac2 = "none")
+
+d.long.hull2 <- data.frame(log_qsdy = c(d.long.hull[[1]], d_table[2],         d_table[2], d_table[1], d_table[1], d_table[2], d_table[2],         d.long.hull[1, 1]), 
+        WTmwk = c(d.long.hull[[2]], d.long.hull[1, 2], d_table[4], d_table[4], d_table[3], d_table[3], d.long.hull[1, 2], d.long.hull[1, 2]))%>%
+  mutate(inund_fac2 = "long")
+```
+
+Predictions
+```{r}
+pred.none = predict_gam(gamd6d, values = list(log_qsdy = seq.lqsdy, WTmwk = seq.wtmwk, inund_fac2 = "none", station = NULL, by = int.lqsdy), 
+                          exclude_terms = "s(station)") %>%
+  mutate(inund_fac2 = "none")
+
+pred.shrt = predict_gam(gamd6d, values = list(log_qsdy = seq.lqsdy, WTmwk = seq.wtmwk, inund_fac2 = "short", station = NULL, by = int.lqsdy), 
+                          exclude_terms = "s(station)") %>%
+  mutate(inund_fac2 = "short")
+
+pred.long = predict_gam(gamd6d, values = list(log_qsdy = seq.lqsdy, WTmwk = seq.wtmwk, inund_fac2 = "long", station = NULL, by = int.lqsdy), 
+                          exclude_terms = "s(station)") %>%
+  mutate(inund_fac2 = "long")
+ 
+pred_downstream <- rbind(pred.none, pred.shrt, pred.long)
+hull_downstream <- rbind(d.shrt.hull2, d.none.hull2, d.long.hull2)
+
+downstream_f <- downstream %>% 
+  filter(log_qsdy < d_table[2] & log_qsdy > d_table[1],
+         WTmwk < d_table[4] & WTmwk > d_table[3])
+```
+
+Plot code
+```{r}
+pred_downstream$inund_fac2 <- factor(pred_downstream$inund_fac2, levels = c("none", "short", "long"))
+hull_downstream$inund_fac2 <- factor(hull_downstream$inund_fac2, levels = c("none", "short", "long"))
+
+library(viridis)
+
+ggplot() + 
+  geom_tile(data = pred_downstream, aes(log_qsdy, WTmwk, fill = fit)) +
+  geom_polygon(data = hull_downstream, aes(x = log_qsdy, y = WTmwk), fill = "white", alpha = 0.7)+
+  geom_point(data = downstream_f, aes(log_qsdy, WTmwk), color = "gray6", shape = 1) +
+  #scale_fill_steps2(midpoint=2, n.breaks=12, low = "green", mid = "blue", high = "yellow")+
+  #scale_fill_steps2(n.breaks=13, breaks = c(0, 0.25, 0.5, 0.75, 1, 1.5, 2, 2.5, 3, 4, 5, 10, 12),low = viridis::viridis(13)[1], mid = viridis::viridis(13)[8], high = viridis::viridis(13)[13])+
+  #viridis::scale_fill_viridis(option = "turbo") +
+ scale_fill_gradientn(colours = c("mediumpurple", "ghostwhite", "cyan","indianred1", "springgreen4", "bisque1", "mediumorchid4","palegreen", "magenta", "aquamarine", "yellow", "orange1","white", "thistle2", "brown"),
+     breaks = c(0, 0.2, 0.4, 0.5, 0.6, 0.7, 0.8,0.9, 1, 1.5, 2,5,8, 12))+
+  facet_wrap(~inund_fac2) + 
+  theme_classic()
+```
+
+
+
+
+```{r}
+ggplot() + 
+  geom_tile(data = pred.shrt, aes(log_qsdy, WTmwk, fill = fit)) +
+  geom_polygon(data = d.shrt.hull2, aes(x = log_qsdy, y = WTmwk), fill = "grey", alpha = 0.3)+
+  geom_point(data = d.shrt, aes(log_qsdy, WTmwk), color = "gray4", shape = 1) +
+  #scale_fill_steps2(n.breaks=13, breaks = c(0, 0.25, 0.5, 0.75, 1, 1.5, 2, 2.5, 3, 4, 5, 10, 12),low = viridis::viridis(13)[1], mid = viridis::viridis(13)[8], high = viridis::viridis(13)[13])+
+  #viridis::scale_fill_viridis(option = "turbo") +
+ scale_fill_gradientn(colours = c("mediumpurple", "ghostwhite", "cyan","indianred1", "springgreen4", "bisque1", "mediumorchid4","palegreen", "magenta", "aquamarine", "yellow", "orange1","white", "brown"),
+     breaks = c(0, 0.2, 0.4, 0.5, 0.6, 0.7, 0.8,0.9, 1, 1.5, 2,5, 12))+
+  theme_classic()
+
+
+ggplot() + 
+  geom_tile(data = pred.long, aes(log_qsdy, WTmwk, fill = fit)) +
+  geom_polygon(data = d.long.hull2, aes(x = log_qsdy, y = WTmwk), fill = "grey", alpha = 0.3)+
+  geom_point(data = d.long, aes(log_qsdy, WTmwk), color = "gray4", shape = 1) +
+  #scale_fill_steps2(n.breaks=13, breaks = c(0, 0.25, 0.5, 0.75, 1, 1.5, 2, 2.5, 3, 4, 5, 10, 12),low = viridis::viridis(13)[1], mid = viridis::viridis(13)[8], high = viridis::viridis(13)[13])+
+   scale_fill_gradientn(colours = c("mediumpurple", "ghostwhite", "cyan","indianred1", "springgreen4", "bisque1", "mediumorchid4","palegreen", "magenta", "aquamarine", "yellow", "orange1","white", "brown"),
+     breaks = c(0, 0.2, 0.4, 0.5, 0.6, 0.7, 0.8,0.9, 1, 1.5, 2,5, 12))+
+  theme_classic()
+```
+
+# Customizing plots in gratia
+```{r}
+draw(gamd6d) & theme_bw()
+
+p1 <- draw(gamd6d, select = "te(log_qsdy,WTmwk):inund_fac2long")
+p2 <- draw(gamd6d, select = "te(log_qsdy,WTmwk):inund_fac2short")
+p3 <- draw(gamd6d, select = "te(log_qsdy,WTmwk):inund_fac2none")
+
+p1 + p2 + p3 + plot_layout(ncol = 3)
+
+# evaluate the smooths
+sm <- smooth_estimates(gamd6d) %>%
+  add_confint()
+
+# add partial residuals to data
+downstream <- downstream %>%
+  add_partial_residuals(gamd6d)
+
+# one smoother at a time, plotted by covar
+sm %>%
+  filter(smooth == "te(log_qsdy,WTmwk):inund_fac2long") %>%
+  ggplot() +
+  geom_rug(aes(x = log_qsdy),
+           data = downstream,
+           sides = "b", length = grid::unit(0.02, "npc")) +
+  geom_ribbon(aes(ymin = lower_ci, ymax = upper_ci, x = log_qsdy),
+              alpha = 0.2) +
+  geom_point(aes(x = log_qsdy, y = `te(log_qsdy,WTmwk):inund_fac2long`),
+             data = downstream, cex = 1.5, colour = "steelblue3") +
+  geom_line(aes(x = log_qsdy, y = est), lwd = 1.2) +
+  labs(y = "Partial effect", title = "Long Inundation")
+
+# add color and size for station and temp
+
+plt <- sm %>%
+  filter(smooth == "te(log_qsdy,WTmwk):inund_fac2long") %>%
+  ggplot() +
+  geom_rug(aes(x = log_qsdy),
+           data = downstream,
+           sides = "b", length = grid::unit(0.02, "npc")) +
+  geom_ribbon(aes(ymin = lower_ci, ymax = upper_ci, x = log_qsdy),
+              alpha = 0.2) +
+  geom_line(aes(x = log_qsdy, y = est), lwd = 1.2) +
+  labs(y = "Partial effect", title = "s(x2)")
+
+plt +
+  geom_point(aes(x = log_qsdy, y = `te(log_qsdy,WTmwk):inund_fac2long`,
+                 colour = station), # <-- map fac to colour aesthetic
+             data = downstream, cex = 1.5)
+
+plt +
+  geom_point(aes(x = log_qsdy, y = `te(log_qsdy,WTmwk):inund_fac2long`,
+                 colour = WTmwk, size = WTmwk), # <-- map fac to colour aesthetic
+             data = downstream, alpha = 0.3) +   # <-- deleted cex
+  scale_colour_viridis_c(option = "plasma")
+
+# seems to work better if subset ahead instead of filter (inund_fac2 not named the same in data and model)
+
+
 ```
